modificación en página principal

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Bienvenido</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 </head>
@@ -12,20 +12,19 @@
 <div class="container">
 	<div class="row">
 		<div class="col-lg-12">
-			<p class="hola letra">HOLA!</p>
-		</div>
-	</div>
-	<div class="row">
-			<div class="col-lg-12">
-				<h1 class="subti">Soy <span>Montse.</span></h1>
-				<h2 class="subti">Desarrolladora <span>Front-End</span> y Diseñadora Gráfica</h2>
-				<h2 class="subti">Cónoce mi trabajo.</h2>
+			<div class="cuadro-blanco">
+				<p class="hola">HOLA!</p>
+					<div class="row">
+						<p class="subti subti2">Soy <span>Montse.</span></p>
+					</div>
+					<div class="row mar-top0">
+						<p class="subti">Desarrolladora <span>Front-End</span> y Diseñadora Gráfica</p>
+					</div>
+					<div>
+						<a href="portafolio.html"><p class="subti">Cónoce mi trabajo.</p></a>
+					</div>
 			</div>
-	</div>
-	
-
-	<div class="row">
-		<a href="portafolio.html"><img src="img-porta/flecha.png" class="flecha"></a>
+		</div>
 	</div>
 </div>
 </body>
