ya está terminada con efectos y acomodado todo

--- a/portafolio.html
+++ b/portafolio.html
@@ -5,11 +5,13 @@
 	<title>Portafolio</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/portafolio.css">
+	<link rel="stylesheet" type="text/css" href="css/efectos.css">
 	<link rel="stylesheet" type="text/css" href="css/materialize.css">
 	<link rel="stylesheet" type="text/css" href="css/materialize.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/icomoon.css">
+	<link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/animate.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<!--<script type="text/javascript" src="js/script.js"></script>-->
@@ -23,18 +25,18 @@
 			</a>
 			<ul> 
 			    <li><a href="index.html" class=" btn-floating red"><i class="material-icons">&#xE88A;</i></a></li>
-			    <li><a class="btn-floating pink" href="#misproyectos"><i class="material-icons">work</i></a></li>
-			    <li><a class="btn-floating #6a1b9a purple darken-3" href="#gustos"><i class="material-icons">face</i></a></li>
-			    <li><a class="btn-floating blue"><i class="material-icons">assessment</i></a></li>
-			    <li><a class="btn-floating #ea80fc purple accent-1"><i class="material-icons">contact_mail</i></a></li>
+			    <li><a href="#misproyectos" class="btn-floating pink"><i class="material-icons">work</i></a></li>
+			    <li><a href="#gustos" class="btn-floating #6a1b9a purple darken-3" ><i class="material-icons">face</i></a></li>
+			    <li><a href="#cv" class="btn-floating blue" ><i class="material-icons">assessment</i></a></li>
+			    <li><a  href="#contacto" class="btn-floating #ea80fc purple accent-1"><i class="material-icons">contact_mail</i></a></li>
 			</ul>
 		</div>
 	</header>
 	<div class="fondo-blanco"> <!-- este es el div de transparencia que encerrará a todos los contenidos -->
 		<div class="row"> <!-- empieza titulo de sección -->
 			<div class="col s12">
-				<p class="titulares te-center">Mis Proyectos</p>
-				<p class="subti te-center"> PORTAFOLIO</p>
+				<p class="titulares center">Mis Proyectos</p>
+				<p class="subti center"> PORTAFOLIO</p>
 			</div>
 		</div>
 		<section id="misproyectos"> <!-- este es carrusel de los proyectos-->
@@ -95,28 +97,28 @@
 		<section id="gustos"> <!-- aquí van las fotos de lo que me gusta -->
 			<div class="row">
 				<div class="col s4 ">
-					<div class="hovereffect">
-						<img src="gustos/foto.jpg" class="responsive-img fotos" width="100%">
-						<div class="overlay">
-           					<h2>Fotografía</h2>
+					<div class="dtl25">
+						<img src="gustos/foto.jpg" class="imgg responsive-img" width="100%">
+						<div class="dtl">
+           					<h2 class="h2">Fotografía</h2>
            					<p class="p">Capturar los mejores momentos</p>
         				</div>
 					</div>		
 				</div>
 				<div class="col s4">
-					<div class="hovereffect">
-					 	<img src="gustos/dis.jpg" class="responsive-img fotos" width="100%">
-						<div class="overlay">
-           					<h2>Diseño</h2>
+					<div class="dtl25">
+					 	<img src="gustos/dis.jpg" class="imgg responsive-img" width="100%">
+						<div class="dtl">
+           					<h2 class="h2">Diseño</h2>
            					<p class="p">Diseño gráfico, de interiores y web</p>
         				</div>
 					 </div>
 				</div>
 				<div class="col s4 ">
-					<div class="hovereffect">
-						<img src="gustos/espacios.jpg" class="responsive-img fotos" width="100%">
-						<div class="overlay">
-           					<h2>Cultura</h2>
+					<div class="dtl25">
+						<img src="gustos/espacios.jpg" class="imgg responsive-img" width="100%">
+						<div class="dtl">
+           					<h2 class="h2">Cultura</h2>
            					<p class="p">Asistir a espacios culturales</p>
         				</div>
 					</div>	
@@ -124,28 +126,28 @@
 			</div>
 			<div class="row">
 				<div class="col s4">
-					<div class="hovereffect">
-						<img src="gustos/conocer.jpg" class="responsive-img fotos" width="100%">
-						<div class="overlay">
-           					<h2>Viajar</h2>
+					<div class="dtl25">
+						<img src="gustos/conocer.jpg" class="imgg responsive-img" width="100%">
+						<div class="dtl">
+           					<h2 class="h2">Viajar</h2>
            					<p class="p">Conocer diferentes lugares <br>de nuestro país</p>
         				</div>
 					</div>	
 				</div>
 				<div class="col s4">
-					<div class="hovereffect">
-						<img src="gustos/ilus.jpg" class="responsive-img fotos"  width="100%">
-						<div class="overlay">
-           					<h2>Ilustración</h2>
+					<div class="dtl25">
+						<img src="gustos/ilus.jpg" class="imgg responsive-img"  width="100%">
+						<div class="dtl">
+           					<h2 class="h2">Ilustración</h2>
            					<p class="p">Mezclar los diferentes tipos y <br> técnicas de ilustración</p>
         				</div>
         			</div>
 				</div>	
 				<div class="col s4">
-					<div class="hovereffect">
-						<img src="gustos/conciertos.jpg" class="responsive-img fotos"  width="100%">
-						<div class="overlay">
-           					<h2>Conciertos</h2>
+					<div class="dtl25">
+						<img src="gustos/conciertos.jpg" class="imgg responsive-img"  width="100%">
+						<div class="dtl">
+           					<h2 class="h2">Conciertos</h2>
            					<p class="p">Asistir a conciertos en vivo</p>
         				</div>
         			</div>
@@ -153,18 +155,48 @@
 			</div>
 		</section>
 		<div class="row">
-			<div class="col s12 center"> 
-					<p class="titulares mar-top100" >Descarga mi CV</p>
-					<a href="CV.pdf" target="blank"> <img src="cv.jpg" class="cv"></a>
+			<div class="col s12"> 
+				<p class="titulares center mar-top100" >Descarga mi CV</p>
+			</div>
+			<section id="cv">
+				<div class="row">
+					<div class="col s12">
+						<ul class="demo-2 effect">
+							<li>
+								<h2 class="zero center">Descarga <br> Aquí</h2>
+							</li>
+							<li>
+								<a href="CV.pdf" target="blank"> <img src="cv.jpg" class="cv topp"></a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</section>	 <!-- aquí empieza el cv -->
+		</div>
+		<div class="row"> <!--aquí van los titulares de contacto-->
+			<div class="col s12"> 
+					<p class="titulares center mar-top100">Trabaja conmigo</p>
+					<p class="subti center"> CONTACTAME</p>
 			</div>
 		</div>
-		<section>
+		<section id="contacto">
 			<div class="row">
-				<div class="col-lg-12"> 
-						<p class="titulares mar-top100" id="tit-proyecto">Trabaja conmigo</p>
-						<p class="subti te-center" id="tit-proyecto"> CONTACTAME</p>
+				<div class="col s3">
+					<a href="https://github.com/MontserratGonzalez1" target="blank"><img src="img-porta/iconos/github.png" class="icon"></a>
 				</div>
-			</div>
+				<div class="col s2">
+					<a href="monkygs@gmail.com"><img src="img-porta/iconos/gmail.png" class=""></a>
+				</div>
+				<div class="col s2">
+					<a href=""><img src="img-porta/iconos/linkedin.png" class=""></a>
+				</div>
+				<div class="col s2">
+					<a href="https://es.pinterest.com/monkygs/" target="blank"><img src="img-porta/iconos/pinterest.png" class=""></a>
+				</div>
+				<div class="col s3">
+					<a href="https://www.facebook.com/monkykags" target="blank"><img src="img-porta/iconos/facebook.png" class="icon2"></a>
+				</div>
+			</div>	
 		</section>
 	</div> <!--ESTE ES EL FONDO BLANCO TRANSPARNTE-->
 	
