ya está linkeado todo, sólo faltaría hacer responsive

--- a/portafolio.html
+++ b/portafolio.html
@@ -43,43 +43,42 @@
 			<div class="col s12">
 				<div class="slid">
 					<ul>
-						<div class="hovereffect">
+						<div class="hovereffect"> <!--proyecto comunidad sostenible-->
 							<li>
 							<img src="proyectos/comunidad.jpg">
 								<div class="overlay">
 									<h1 class="top">
-										<a href="#">Entrar al sitio</a>
+										<a href="proyectos-pro/18_Comunidad Sostenible/index.html" target="blank">Entrar al sitio</a>
 									</h1> 
             					</div>
 							</li>
 						</div>
-						
-						<div class="hovereffect">
+						<div class="hovereffect"> <!--proyecto kane -->
 							<li>
 							<img src="proyectos/kane.jpg">
 								<div class="overlay">
 									<h1 class="top">
-										<a href="#">Entrar al sitio</a>
+										<a href="proyectos-pro/kane/index.html" target="blank">Entrar al sitio</a>
 									</h1> 
             					</div>
 							</li>
 						</div>
-						<div class="hovereffect">
+						<div class="hovereffect"> <!--proyecto spring-->
 							<li>
 							<img src="proyectos/spring.jpg">
 								<div class="overlay">
 									<h1 class="top">
-										<a href="#">Entrar al sitio</a>
+										<a href="proyectos-pro/26_Sprint/index.html" target="blank">Entrar al sitio</a>
 									</h1> 
             					</div>
 							</li>
 						</div>
-						<div class="hovereffect">
+						<div class="hovereffect"> <!--proyecto whats-->
 							<li>
 							<img src="proyectos/whats.jpg">
 								<div class="overlay">
 									<h1 class="top">
-										<a href="#">Entrar al sitio</a>
+										<a href="https://montserratgonzalez1.github.io/46_Whatsapp/" target="blank">Entrar al sitio</a>
 									</h1> 
             					</div>
 							</li>
@@ -179,16 +178,16 @@
 					<p class="subti center"> CONTACTAME</p>
 			</div>
 		</div>
-		<section id="contacto">
+		<section id="contacto"> <!-- esta seccion es del contacto, no se han linkeado bien el face ni correo-->
 			<div class="row">
 				<div class="col s3">
 					<a href="https://github.com/MontserratGonzalez1" target="blank"><img src="img-porta/iconos/github.png" class="icon"></a>
 				</div>
 				<div class="col s2">
-					<a href="monkygs@gmail.com"><img src="img-porta/iconos/gmail.png" class=""></a>
+					<a href="x"><img src="img-porta/iconos/gmail.png" class=""></a>
 				</div>
 				<div class="col s2">
-					<a href=""><img src="img-porta/iconos/linkedin.png" class=""></a>
+					<a href="https://www.linkedin.com/" target="blank"><img src="img-porta/iconos/linkedin.png" class=""></a>
 				</div>
 				<div class="col s2">
 					<a href="https://es.pinterest.com/monkygs/" target="blank"><img src="img-porta/iconos/pinterest.png" class=""></a>
