--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <body class="body1">
 	<!--<div id="info">  este es el div que contiene el fondo que se moverá siguiendo al cursor // a final de cuentas se quitó el efecto y se eliminó el script.js correspondiente -->
 		<div class="row"> 
-			<div class="col s12">
+			<div class="col s12 m12 l12">
 				<div class="cuadro-blanco"> <!-- este es el cuadro grandote -->
 					<p class="hola">HOLA!</p>
 					<div class="row animated fadeInDown"> <!-- es te es el row contendor del texto -->
-						<p class="subti tit top1">Soy <span>Montse.</span></p>
+						<p class="subti tit top1 ">Soy <span>Montse.</span></p>
 						<br>
 						<p class="subti tit top2">Desarrolladora web 
 						<br>
