ultimas actualización, se cambio la letra del slide y títulos

--- a/portafolio.html
+++ b/portafolio.html
@@ -48,7 +48,8 @@
 							<img src="proyectos/comunidad.jpg">
 								<div class="overlay">
 									<h1 class="top">
-										<a href="proyectos-pro/18_Comunidad Sostenible/index.html" target="blank">Entrar al sitio</a>
+										<a href="https://montserratgonzalez1.github.io/18_Comunidad-Sostenible/" target="blank">Comunidad Sostenible</a>
+										<p> Conocer más</p>
 									</h1> 
             					</div>
 							</li>
@@ -58,7 +59,8 @@
 							<img src="proyectos/kane.jpg">
 								<div class="overlay">
 									<h1 class="top">
-										<a href="proyectos-pro/kane/index.html" target="blank">Entrar al sitio</a>
+										<a href="https://montserratgonzalez1.github.io/kane/" target="blank">Kane Theme <br>(paleta de colores)</a>
+										<p>Conocer más</p>
 									</h1> 
             					</div>
 							</li>
@@ -68,7 +70,8 @@
 							<img src="proyectos/spring.jpg">
 								<div class="overlay">
 									<h1 class="top">
-										<a href="proyectos-pro/26_Sprint/index.html" target="blank">Entrar al sitio</a>
+										<a href="proyectos-pro/26_Sprint/index.html" target="blank">Flatness Spring Came</a>
+										<p>Conocer más</p>
 									</h1> 
             					</div>
 							</li>
@@ -78,7 +81,8 @@
 							<img src="proyectos/whats.jpg">
 								<div class="overlay">
 									<h1 class="top">
-										<a href="https://montserratgonzalez1.github.io/46_Whatsapp/" target="blank">Entrar al sitio</a>
+										<a href="https://montserratgonzalez1.github.io/46_Whatsapp/" target="blank">Whatsapp <br>(versión Desktop)</a>
+										<p>Conocer más</p>
 									</h1> 
             					</div>
 							</li>
@@ -201,7 +205,7 @@
 	<footer>
 		<div class="container">
 		<p>Diseño: Montserrat González <br>
-		Laboratoria México</p>
+		Laboratoria México 2016</p>
 		</div>
 	</footer>
 	
