se modifico la liga del proyecto sprint

--- a/portafolio.html
+++ b/portafolio.html
@@ -70,7 +70,7 @@
 							<img src="proyectos/spring.jpg">
 								<div class="overlay">
 									<h1 class="top">
-										<a href="proyectos-pro/26_Sprint/index.html" target="blank">Flatness Spring Came</a>
+										<a href="https://montserratgonzalez1.github.io/26_Sprint/" target="blank">Flatness Spring Came</a>
 										<p>Conocer más</p>
 									</h1> 
             					</div>
