se cambio nombre del cv

--- a/portafolio.html
+++ b/portafolio.html
@@ -170,6 +170,7 @@
 							</li>
 							<li>
 								<a href="CV.pdf" target="blank"> <img src="cv.jpg" class="cv topp"></a>
+								<!-- el nombre del cv debe estar en minusculas -->
 							</li>
 						</ul>
 					</div>
