problemas con la imagen de cv

--- a/portafolio.html
+++ b/portafolio.html
@@ -169,7 +169,7 @@
 								<h2 class="zero center">Descarga <br> Aquí</h2>
 							</li>
 							<li>
-								<a href="CV.pdf" target="blank"> <img src="cv.jpg" class="cv topp"></a>
+								<a href="CV.pdf" target="blank"> <img src="curri.jpg" class="cv topp"></a>
 								<!-- el nombre del cv debe estar en minusculas -->
 							</li>
 						</ul>
