--- a/portafolio.html
+++ b/portafolio.html
@@ -170,7 +170,7 @@
 							</li>
 							<li>
 								<a href="CV.pdf" target="blank"> <img src="curri.jpg" class="cv topp"></a>
-								<!-- el nombre del cv debe estar en minusculas -->
+								<!-- el nombre del cv debe estar en minusculas mmm -->
 							</li>
 						</ul>
 					</div>
