regresando a las extensiones anteriores

--- a/portafolio.html
+++ b/portafolio.html
@@ -67,7 +67,7 @@
 						</div>
 						<div class="hovereffect"> <!--proyecto spring-->
 							<li>
-							<img src="proyectos/spring.JPG">
+							<img src="proyectos/spring.jpg">
 								<div class="overlay">
 									<h1 class="top">
 										<a href="https://montserratgonzalez1.github.io/26_Sprint/" target="blank">Flatness Spring Came</a>
@@ -78,7 +78,7 @@
 						</div>
 						<div class="hovereffect"> <!--proyecto whats-->
 							<li>
-							<img src="proyectos/whats.JPG">
+							<img src="proyectos/whats.jpg">
 								<div class="overlay">
 									<h1 class="top">
 										<a href="https://montserratgonzalez1.github.io/46_Whatsapp/" target="blank">Whatsapp <br>(versión Desktop)</a>
@@ -101,7 +101,7 @@
 			<div class="row">
 				<div class="col s4 m4">
 					<div class="dtl25">
-						<img src="gustos/foto.JPG" class="imgg responsive-img" >
+						<img src="gustos/foto.jpg" class="imgg responsive-img" >
 						<div class="dtl">
            					<h2 class="h2">Fotografía</h2>
            					<p class="p">Capturar los mejores momentos</p>
@@ -110,7 +110,7 @@
 				</div>
 				<div class="col s4 m4">
 					<div class="dtl25">
-					 	<img src="gustos/dis.JPG" class="imgg responsive-img" >
+					 	<img src="gustos/dis.jpg" class="imgg responsive-img" >
 						<div class="dtl">
            					<h2 class="h2">Diseño</h2>
            					<p class="p">Diseño gráfico, de interiores y web</p>
@@ -119,7 +119,7 @@
 				</div>
 				<div class="col s4 m4">
 					<div class="dtl25">
-						<img src="gustos/espacios.JPG" class="imgg responsive-img">
+						<img src="gustos/espacios.jpg" class="imgg responsive-img">
 						<div class="dtl">
            					<h2 class="h2">Cultura</h2>
            					<p class="p">Asistir a espacios culturales</p>
@@ -130,7 +130,7 @@
 			<div class="row">
 				<div class="col s4 m4">
 					<div class="dtl25">
-						<img src="gustos/conocer.JPG" class="imgg responsive-img">
+						<img src="gustos/conocer.jpg" class="imgg responsive-img">
 						<div class="dtl">
            					<h2 class="h2">Viajar</h2>
            					<p class="p">Conocer diferentes lugares <br>de nuestro país</p>
@@ -139,7 +139,7 @@
 				</div>
 				<div class="col s4 m4">
 					<div class="dtl25">
-						<img src="gustos/ilus.JPG" class="imgg responsive-img">
+						<img src="gustos/ilus.jpg" class="imgg responsive-img">
 						<div class="dtl">
            					<h2 class="h2">Ilustración</h2>
            					<p class="p">Mezclar los diferentes tipos y <br> técnicas de ilustración</p>
@@ -148,7 +148,7 @@
 				</div>	
 				<div class="col s4 m4">
 					<div class="dtl25">
-						<img src="gustos/conciertos.JPG" class="imgg responsive-img">
+						<img src="gustos/conciertos.jpg" class="imgg responsive-img">
 						<div class="dtl">
            					<h2 class="h2">Conciertos</h2>
            					<p class="p">Asistir a conciertos en vivo</p>
@@ -169,8 +169,8 @@
 								<h2 class="zero center">Descarga <br> Aquí</h2>
 							</li>
 							<li>
-								<a href="CV.pdf" target="blank"> <img src="curri.JPG" class="cv topp"></a>
-								<!-- el nombre del cv debe estar en minusculas mmm -->
+								<a href="CV.pdf" target="blank"> <img src="curri.jpg" class="cv topp"></a>
+								<!-- el nombre del cv debe estar en minusculas -->
 							</li>
 						</ul>
 					</div>
