cambios en imagenes

--- a/portafolio.html
+++ b/portafolio.html
@@ -67,7 +67,7 @@
 						</div>
 						<div class="hovereffect"> <!--proyecto spring-->
 							<li>
-							<img src="proyectos/spring.jpg">
+							<img src="proyectos/spring.JPEG">
 								<div class="overlay">
 									<h1 class="top">
 										<a href="https://montserratgonzalez1.github.io/26_Sprint/" target="blank">Flatness Spring Came</a>
@@ -78,7 +78,7 @@
 						</div>
 						<div class="hovereffect"> <!--proyecto whats-->
 							<li>
-							<img src="proyectos/whats.jpg">
+							<img src="proyectos/whats.JPEG">
 								<div class="overlay">
 									<h1 class="top">
 										<a href="https://montserratgonzalez1.github.io/46_Whatsapp/" target="blank">Whatsapp <br>(versión Desktop)</a>
@@ -169,7 +169,7 @@
 								<h2 class="zero center">Descarga <br> Aquí</h2>
 							</li>
 							<li>
-								<a href="CV.pdf" target="blank"> <img src="curri.jpg" class="cv topp"></a>
+								<a href="CV.pdf" target="blank"> <img src="curri.JPEG" class="cv topp"></a>
 								<!-- el nombre del cv debe estar en minusculas -->
 							</li>
 						</ul>
